Removed NUMPAGES field from JINJA_FINAL.docx and renamed it to JINJA_FINAL_2.docx just to keep GitHub happy.

--- a/docassemble/LLAW33012020S1P18/data/questions/GP18FINAL.yml
+++ b/docassemble/LLAW33012020S1P18/data/questions/GP18FINAL.yml
@@ -221,7 +221,7 @@ subquestion: |
 
   **Make sure you download or email your document before you exit!!**
 attachment: 
-  docx template file: JINJA_FINAL.docx
+  docx template file: JINJA_FINAL_2.docx
   valid formats: 
     - pdf
 buttons:
